Fixed overlay issues. Added auto-scaling of image so overlay doesn't go off screen.

--- a/community.css
+++ b/community.css
@@ -326,8 +326,10 @@ img {
 }
 .visible {
     visibility: visible;
-    height: auto;
     width: 100%;
+    height: 100%;
+    max-height: 250px;
+    object-fit: contain;
     margin-bottom: 10px;
 }
 
